--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
+/* Global Styles */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #d9dddc;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+    list-style-type: none;
 }
+
+a {
+    text-decoration: none;
+    color: #f9fafb;
+}
+
+a:hover {
+    color: #f9fafb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    text-transform: capitalize;
+    line-height: 1.25;
+}
+/* Global Styles */
+
+/* ------- header ------- */
+.header {
+    width: 85%;
+    margin: auto;
+    font-family: "Cormorant Garamond", serif;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header img {
+    cursor: pointer;
+}
+/* ------- header ------- */
+
+/* ------- home ------- */
+.home {
+    padding: 0;
+    margin: 0;
+}
+
+.home-body img {
+    width: 85%;
+}
+/* ------- home ------- */
+
+/* ------- footer ------- */
+.footer {
+    width: 85%;
+    margin: auto;
+    margin-top: 1em;
+    font-family: "Cormorant Garamond", serif;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer-container a {
+    max-width: 30px;
+    max-height: 30px;
+}
+
+.footer-container img {
+    max-width: 30px;
+}
+/* ------- footer ------- */
