--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,10 @@ ul {
 
 a {
     text-decoration: none;
-    color: #f9fafb;
+    color: #000000;
 }
 
 a:hover {
-    color: #f9fafb;
     text-decoration: none;
     cursor: pointer;
 }
@@ -114,3 +113,25 @@ h4 {
     max-width: 30px;
 }
 /* ------- footer ------- */
+
+/* ------- about me ------- */
+.aboutme-profile {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.aboutme-container {
+    margin: 2em;
+}
+
+.aboutme-item {
+    text-align: left;
+    margin-bottom: 1em;
+}
+
+.aboutme-item a {
+    text-decoration: underline;
+}
+/* ------- about me ------- */
