--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
     background-color: #d9dddc;
-    font-family: "DM Sans", sans-serif;
+    font-family: "Cormorant Garamond", serif;
     text-align: center;
 }
 
@@ -38,7 +38,6 @@ h4 {
 .header {
     width: 85%;
     margin: auto;
-    font-family: "Cormorant Garamond", serif;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -47,11 +46,36 @@ h4 {
 .header img {
     cursor: pointer;
 }
+
+.header h1 {
+    font-size: 27px;
+}
+
+@media only screen and (min-width: 720px) {
+    .header img {
+        display: none;
+    }
+
+    .header {
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+
+    .header h1 {
+        text-align: left;
+    }
+}
+
+@media only screen and (min-width: 1260px) {
+    .header {
+        display: grid;
+        grid-template-columns: 25% 50% 25%;
+    }
+}
 /* ------- header ------- */
 
 /* ------- navbar_mobile ------- */
 .navbar_mobile {
-    font-family: "Cormorant Garamond", serif;
     background-color: #d9dddc;
     width: 100vw;
     height: 100vh;
@@ -65,6 +89,12 @@ h4 {
     align-items: center;
 }
 
+.navbar_mobile_main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .navbar_mobile img {
     position: fixed;
     top: 5%;
@@ -72,29 +102,154 @@ h4 {
     cursor: pointer;
 }
 
-.navbar_mobile_main h2 {
+.nav-mobile-item {
+    position: relative;
     cursor: pointer;
+    font-size: 20px;
+    font-family: "DM Sans", sans-serif;
+    color: #808080;
 }
 
+.nav-mobile-item:hover {
+    color: black;
+}
+
+.nav-mobile-item:after {
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 1px;
+    width: 0%;
+    left: 0;
+    bottom: -5px;
+    transition: 0.3s;
+}
+
+.nav-mobile-item:hover:after {
+    width: 100%;
+}
+
+.nav-mobile-item-selected {
+    position: relative;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: "DM Sans", sans-serif;
+    color: #000000;
+}
+
+.nav-mobile-item-selected:after {
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 1px;
+    width: 100%;
+    left: 0;
+    bottom: -5px;
+    transition: 0.3s;
+}
 /* ------- navbar_mobile ------- */
+
+/* ------- navbar-desktop ------- */
+.nav-desktop {
+    display: none;
+}
+
+@media only screen and (min-width: 720px) {
+    .nav-desktop {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .nav-desktop-item {
+        position: relative;
+        cursor: pointer;
+        font-size: 17px;
+        font-family: "DM Sans", sans-serif;
+        color: #808080;
+    }
+
+    .nav-desktop-item:hover {
+        color: black;
+    }
+
+    .nav-desktop-item:after {
+        content: "";
+        position: absolute;
+        background-color: black;
+        height: 1px;
+        width: 0%;
+        left: 0;
+        bottom: -5px;
+        transition: 0.3s;
+    }
+
+    .nav-desktop-item:hover:after {
+        width: 100%;
+    }
+
+    .nav-desktop-item-selected {
+        position: relative;
+        cursor: pointer;
+        font-size: 17px;
+        font-family: "DM Sans", sans-serif;
+        color: #000000;
+    }
+
+    .nav-desktop-item-selected:after {
+        content: "";
+        position: absolute;
+        background-color: black;
+        height: 1px;
+        width: 100%;
+        left: 0;
+        bottom: -5px;
+        transition: 0.3s;
+    }
+}
+/* ------- navbar-desktop ------- */
 
 /* ------- home ------- */
 .home {
-    padding: 0;
-    margin: 0;
+    margin: auto;
 }
 
 .home-body img {
     width: 85%;
+}
+
+.home-img {
+    display: none;
+}
+
+@media only screen and (min-width: 720px) {
+    .home {
+        width: 85%;
+    }
+    .home-body {
+        width: 80%;
+        margin: 3em auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .home-body img {
+        width: 48%;
+    }
+
+    .home-img {
+        display: block;
+    }
 }
 /* ------- home ------- */
 
 /* ------- footer ------- */
 .footer {
     width: 85%;
+    max-width: 300px;
     margin: auto;
-    margin-top: 1em;
-    font-family: "Cormorant Garamond", serif;
+    margin-top: 2em;
 }
 
 .footer-container {
